--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -523,6 +523,14 @@ body {
   }
 }
 
+/* Map */
+            .mapouter, .gmap_canvas {
+              display: block;
+ margin-left: auto;
+ margin-right: auto;
+ width: 90%;
+            }
+
 /*------FOOTER-----*/
 #footer {
   width: 100%;
