--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -57,3 +57,15 @@ body {
 #footer {
 	width: 100%;
 }
+
+.hero-banner__img {
+	object-fit: cover;
+	width: 1440px;
+	height: 387px;
+}
+
+.img-portrait {
+	object-fit: cover;
+	width: 175px;
+	height: 290px;
+}
