--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -69,3 +69,17 @@ body {
 	width: 175px;
 	height: 290px;
 }
+
+.mapouter {
+	position: relative;
+	text-align: right;
+	height: 287px;
+	width: 2000px;
+}
+
+.gmap_canvas {
+	overflow: hidden;
+	background: none !important;
+	height: 287px;
+	width: 1181px;
+  }
