--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -540,4 +540,18 @@ body {
   height: 290px;
 }
 
+.mapouter {
+  position: relative;
+  text-align: right;
+  height: 287px;
+  width: 2000px;
+}
+
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 287px;
+  width: 1181px;
+}
+
 /*# sourceMappingURL=style.css.map */
