--- a/assets/css/sass/style.css
+++ b/assets/css/sass/style.css
@@ -8,27 +8,38 @@ Version: 1.0
 /*! MIXIN  */
 /*Transitions*/
 @-webkit-keyframes moveUp {
+  0% {
+  }
   100% {
     -webkit-transform: translateY(0);
     opacity: 1;
   }
 }
+
 @keyframes moveUp {
+  0% {
+  }
   100% {
     -webkit-transform: translateY(0);
     transform: translateY(0);
     opacity: 1;
   }
 }
+
 /*Moving up fade in animation*/
 .moveUp {
   opacity: 0;
-  -webkit-transform: translateY(200px); /*Taken from mixin.scss*/
-  transform: translateY(200px); /*Taken from mixin.scss*/
-  -moz-transform: translateY(200px); /*Taken from mixin.scss*/
-  -moz-animation: moveUp 1s ease forwards; /*Taken from mixin.scss*/
-  -webkit-animation: moveUp 1s ease forwards; /*Taken from mixin.scss*/
-  animation: moveUp 1s ease forwards; /*Taken from mixin.scss*/
+  -webkit-transform: translateY(200px);
+  /*Taken from mixin.scss*/
+  transform: translateY(200px);
+  /*Taken from mixin.scss*/
+  -moz-transform: translateY(200px);
+  /*Taken from mixin.scss*/
+  /*Taken from mixin.scss*/
+  -webkit-animation: moveUp 1s ease forwards;
+  /*Taken from mixin.scss*/
+  animation: moveUp 1s ease forwards;
+  /*Taken from mixin.scss*/
 }
 
 /*Buttons*/
@@ -40,21 +51,21 @@ Version: 1.0
   border-radius: 9px;
   cursor: pointer;
   overflow: hidden;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background: #2a5db0;
   font-weight: bold;
   color: white !important;
   -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -ms-transition: all 0.3s;
-  -o-transition: all 0.3s;
   transition: all 0.3s;
   /*Taken from mixin.scss*/
 }
+
 .btn:hover {
   padding-right: 30px;
   background: #16315e;
 }
+
 .btn:before {
   content: "→";
   position: absolute;
@@ -63,12 +74,12 @@ Version: 1.0
   line-height: 2;
   color: #fff;
   -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
   transition: all 0.3s;
   right: -20px;
   top: 0;
   opacity: 0;
 }
+
 .btn:hover:before {
   right: 8px;
   opacity: 1;
@@ -77,7 +88,7 @@ Version: 1.0
 /*Mixin SASS file*/
 /*! TYPOGRAPHY  */
 /* --- Convert percent font sizes to em ---*/
-html, .paragraph, #header nav#menu ul li.search input#searchInput, li, p {
+html, .paragraph, li, #header nav#menu ul li.search input#searchInput, p {
   font-family: "Open Sans", sans-serif;
   font-weight: normal;
   margin-top: 10px;
@@ -87,7 +98,8 @@ html, .paragraph, #header nav#menu ul li.search input#searchInput, li, p {
   line-height: 1.25rem;
   color: black;
 }
-html strong, html b, .paragraph strong, #header nav#menu ul li.search input#searchInput strong, li strong, .paragraph b, #header nav#menu ul li.search input#searchInput b, li b, p strong, p b {
+
+html strong, html b, .paragraph strong, li strong, #header nav#menu ul li.search input#searchInput strong, .paragraph b, li b, #header nav#menu ul li.search input#searchInput b, p strong, p b {
   font-weight: bold;
 }
 
@@ -133,13 +145,11 @@ a {
   color: #2a5db0;
   text-decoration: none;
   -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  -o-transition: 0.5s;
   transition: 0.5s;
   /*Taken fomr mixin.scss*/
   cursor: pointer;
 }
+
 a:hover, a:active, a:visited {
   color: #16315e;
   text-decoration: none;
@@ -152,29 +162,35 @@ a:hover, a:active, a:visited {
   width: 102%;
   height: 100px;
   overflow: hidden;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
   background: white;
   /*Breakpoint for when menu can't fit the screen anymore*/
   /*#header h1*/
   /*Close nav#menu*/
 }
+
 @media screen and (max-width: 1190px) {
   #header {
     padding: 2%;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     height: auto;
     position: relative;
   }
 }
+
 #header #branding {
   padding: 1%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   height: 100%;
   display: inline-block;
   vertical-align: middle;
   /*Breakpoint for when menu can't fit the screen anymore*/
   /*#bradning img*/
 }
+
 @media screen and (max-width: 1190px) {
   #header #branding {
     height: auto;
@@ -186,15 +202,18 @@ a:hover, a:active, a:visited {
     width: 100% !important;
   }
 }
+
 #header #branding img {
   height: 100%;
   width: auto;
   display: block;
 }
+
 #header h1 {
   vertical-align: middle;
   display: inline-block;
 }
+
 #header nav#menu {
   display: inline-block;
   vertical-align: middle;
@@ -205,14 +224,12 @@ a:hover, a:active, a:visited {
   /*Close @media screen and (max-width: 1190px)*/
   /*Close ul*/
 }
+
 @media screen and (max-width: 1190px) {
   #header nav#menu {
     min-width: auto;
     max-height: 0px;
     -webkit-transition: 1s;
-    -moz-transition: 1s;
-    -ms-transition: 1s;
-    -o-transition: 1s;
     transition: 1s;
     /*Taken fomr mixin.scss*/
     /*Open menu*/
@@ -224,9 +241,6 @@ a:hover, a:active, a:visited {
     width: 100%;
     max-height: 1000px;
     -webkit-transition: 1s;
-    -moz-transition: 1s;
-    -ms-transition: 1s;
-    -o-transition: 1s;
     transition: 1s;
     /*Taken fomr mixin.scss*/
   }
@@ -238,10 +252,12 @@ a:hover, a:active, a:visited {
     border-top: 1px solid #CCC;
   }
 }
+
 #header nav#menu ul {
   display: block;
   /*Close li*/
 }
+
 #header nav#menu ul li {
   display: inline-block;
   vertical-align: middle;
@@ -251,32 +267,37 @@ a:hover, a:active, a:visited {
   /*Breakpoint for when menu can't fit the screen anymore*/
   /*@media screen and (max-width: 1190px)*/
 }
+
 #header nav#menu ul li a.current {
   color: #16315e;
 }
+
 #header nav#menu ul li.icon {
   display: none;
 }
+
 #header nav#menu ul li.search input#searchInput {
   background-image: url("../searchicon.png");
   background-position: 4px 7px;
   background-repeat: no-repeat;
   width: 113px;
   background-size: 15px auto;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 5px 5px 5px 22px;
   border: 1px solid #CCC;
   margin-bottom: 12px;
-  box-shadow: 0 0 0 transparent;
+  -webkit-box-shadow: 0 0 0 transparent;
+          box-shadow: 0 0 0 transparent;
 }
+
 #header nav#menu ul li.search input#searchInput:focus {
-  box-shadow: 0 0 5px #2a5db0;
+  -webkit-box-shadow: 0 0 5px #2a5db0;
+          box-shadow: 0 0 5px #2a5db0;
   -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -ms-transition: 0.3s;
-  -o-transition: 0.3s;
   transition: 0.3s;
 }
+
 @media screen and (max-width: 1190px) {
   #header nav#menu ul li.icon {
     float: right;
@@ -307,60 +328,73 @@ article#article {
   /*Close .info*/
   /*Close .show*/
 }
+
 @media (min-width: 461px) and (max-width: 870px) {
   article#article {
     width: 48% !important;
   }
 }
+
 @media (max-width: 460px) {
   article#article {
     width: 98% !important;
     max-height: none;
   }
 }
+
 article#article.article-0 {
   width: 64%;
   max-height: none;
 }
+
 article#article.article-0 .info p {
   color: white;
 }
+
 article#article.article-0 .description, article#article.article-0 .btn {
   display: block !important;
   /*Don't show buttons on most articles since it takes a lot of space*/
 }
+
 @media (max-width: 460px) {
   article#article.article-0 .description, article#article.article-0 .btn {
     display: none !important;
   }
 }
+
 article#article.article-0 .author {
   display: inline-block !important;
 }
+
 article#article.article-0 img {
   height: 520px;
   /*Make image shorter on mobile phones*/
 }
+
 @media (max-width: 460px) {
   article#article.article-0 img {
     max-height: 200px !important;
   }
 }
+
 article#article.article-2, article#article.article-3, article#article.article-4 {
   border-top: 1px solid #CCC;
   padding-top: 10px;
   margin-top: 0;
   height: 86px;
 }
+
 article#article.article-2 .img-link, article#article.article-3 .img-link, article#article.article-4 .img-link {
   float: left;
   width: 40%;
   display: block;
   clear: none;
 }
+
 article#article.article-2 .img-link img, article#article.article-3 .img-link img, article#article.article-4 .img-link img {
   height: 86px;
 }
+
 article#article.article-2 .info, article#article.article-3 .info, article#article.article-4 .info {
   width: 60%;
   float: left;
@@ -370,9 +404,11 @@ article#article.article-2 .info, article#article.article-3 .info, article#articl
   padding: 0 0 0 3%;
   height: 86px;
 }
+
 article#article.article-2 .info .date-author, article#article.article-3 .info .date-author, article#article.article-4 .info .date-author {
   display: none;
 }
+
 article#article.article-2 .info h2, article#article.article-3 .info h2, article#article.article-4 .info h2 {
   font-size: 14px;
   font-size: 0.875rem;
@@ -380,16 +416,20 @@ article#article.article-2 .info h2, article#article.article-3 .info h2, article#
   line-height: 1rem;
   font-weight: 700;
 }
+
 article#article.article-2 .info a, article#article.article-3 .info a, article#article.article-4 .info a {
   color: black !important;
 }
+
 article#article img {
   display: block;
   overflow: hidden;
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 200px;
 }
+
 article#article .info {
   width: 100%;
   position: absolute;
@@ -398,25 +438,31 @@ article#article .info {
   bottom: 0;
   clear: both;
   overflow: hidden;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 2%;
   display: block;
 }
+
 article#article .info .date-author {
   display: block;
   margin-top: 0;
   color: white;
 }
+
 article#article .info a {
   color: white;
 }
+
 article#article .info .description, article#article .info .btn {
   display: none;
 }
+
 article#article.hide {
   opacity: 0;
   position: absolute;
 }
+
 article#article.show {
   opacity: 1;
   display: block;
@@ -426,24 +472,27 @@ article#article.show {
   height: auto;
   opacity: 1;
   -webkit-transition: opacity 1s;
-  -moz-transition: opacity 1s;
-  -ms-transition: opacity 1s;
-  -o-transition: opacity 1s;
   transition: opacity 1s;
   /*Taken fomr mixin.scss*/
   /*Close .info*/
 }
+
 article#article.show a.img-link {
   float: none !important;
   width: 100% !important;
+  -webkit-transition: none;
   transition: none;
 }
+
 article#article.show a.img-link img {
   height: 200px !important;
+  -webkit-transition: none;
   transition: none;
 }
+
 article#article.show .info {
   width: 100%;
+  -webkit-transition: none;
   transition: none;
   position: absolute;
   background: rgba(0, 0, 0, 0.5);
@@ -452,6 +501,7 @@ article#article.show .info {
   float: none;
   height: auto;
 }
+
 article#article.show .info h2 {
   font-family: "Playfair Display", serif;
   font-weight: normal;
@@ -459,11 +509,14 @@ article#article.show .info h2 {
   font-size: 1.25rem;
   line-height: 25px;
   line-height: 1.5625rem;
+  -webkit-transition: none;
   transition: none;
 }
+
 article#article.show .info a {
   color: white !important;
 }
+
 article#article.show .info .date-author {
   display: block !important;
 }
@@ -490,7 +543,8 @@ body {
   display: block;
   clear: both;
   padding: 1%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: "Playfair Display", serif;
   font-size: 13pt;
   color: black;
@@ -505,7 +559,8 @@ body {
     width: 100% !important;
     margin: 0px !important;
     overflow-x: hidden !important;
-    -webkit-text-size-adjust: none; /* Prevent font scaling in landscape */
+    -webkit-text-size-adjust: none;
+    /* Prevent font scaling in landscape */
   }
   body {
     margin: 0 0 20px;
@@ -513,28 +568,20 @@ body {
     min-height: 100%;
   }
 }
+
 #content {
   width: 80%;
   margin: 0 auto;
 }
+
 @media (max-width: 870px) {
   #content {
     width: 100%;
   }
 }
 
-/* Map */
-            .mapouter, .gmap_canvas {
-              display: block;
- margin-left: auto;
- margin-right: auto;
- width: 90%;
-            }
-
 /*------FOOTER-----*/
 #footer {
   width: 100%;
 }
-
-
 /*# sourceMappingURL=style.css.map */
