Moved classes to articles.scss instead of styles.scss

--- a/assets/css/sass/articles.scss
+++ b/assets/css/sass/articles.scss
@@ -198,3 +198,15 @@ article#article {
   padding: 0px !important;
   overflow: hidden !important;
 }
+
+.hero-banner__img {
+	object-fit: cover;
+	width: 1440px;
+	height: 387px;
+}
+
+.img-portrait {
+	object-fit: cover;
+	width: 175px;
+	height: 290px;
+}
