Centered images & fixed hero banner

--- a/assets/css/sass/articles.scss
+++ b/assets/css/sass/articles.scss
@@ -201,12 +201,18 @@ article#article {
 
 .hero-banner__img {
 	object-fit: cover;
-	width: 1440px;
-	height: 387px;
+  width: 100vw;
+  height: 50vh;
 }
 
-.img-portrait {
+.portrait__img {
 	object-fit: cover;
 	width: 175px;
 	height: 290px;
 }
+
+.portrait {
+  display: block;
+  text-align: center;
+}
+
