Fixed Iframe center
changed css and removed style code from HTML

--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -62,7 +62,6 @@ body {
 	position: relative;
 	text-align: right;
 	height: 287px;
-	width: 2000px;
 }
 
 .gmap_canvas {
@@ -70,6 +69,9 @@ body {
 	background: none !important;
 	height: 287px;
 	width: 1181px;
+	display: block;
+	margin: 0px auto;
+	text-align: center;
   }
 
 .icon__img {
