Added margins and imgs

--- a/assets/articles.scss
+++ b/assets/articles.scss
@@ -217,18 +217,5 @@ article#article {
 }
 
 .contact-title-container {
-	margin: 60px 0;
-
+	margin-top: 60px;
   }
-
-  .contact-icons-container{
-    margin-top: auto;
-    text-align: center;
-  }
-
-.meet-team-title-container {
-  margin: 60px 0 20px 0;
-}
-.meet-team-container {
-  margin-bottom: 50px;
-}
