--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,6 +500,23 @@ article#article.show .info .date-author {
   text-align: center;
 }
 
+.contact-title-container {
+  margin: 60px 0;
+}
+
+.contact-icons-container {
+  margin-top: auto;
+  text-align: center;
+}
+
+.meet-team-title-container {
+  margin: 60px 0 20px 0;
+}
+
+.meet-team-container {
+  margin-bottom: 50px;
+}
+
 /*Articles SASS file*/
 body {
   width: 100%;
@@ -549,6 +566,7 @@ body {
   position: relative;
   text-align: right;
   height: 287px;
+  margin: 60px auto 75px auto;
 }
 
 .gmap_canvas {
@@ -557,12 +575,15 @@ body {
   height: 287px;
   width: 1181px;
   display: block;
-  margin: 0px auto;
   text-align: center;
 }
 
 .icon__img {
   padding: 5px;
+}
+
+.page-content {
+  margin: 0 10%;
 }
 
 /*# sourceMappingURL=style.css.map */
