--- a/assets/css/sass/articles.scss
+++ b/assets/css/sass/articles.scss
@@ -199,10 +199,15 @@ article#article {
   overflow: hidden !important;
 }
 
+.hero-banner {
+  margin: 0 !important;
+}
+
 .hero-banner__img {
 	object-fit: cover;
-  width: 100vw;
+  width: 100%;
   height: 50vh;
+  margin: 0 !important;
 }
 
 .portrait__img {
@@ -213,7 +218,7 @@ article#article {
 
 .portrait {
   display: block;
-  text-align: center;
+  text-align: right;
 }
 
 .contact-title-container {
@@ -223,7 +228,7 @@ article#article {
 
   .contact-icons-container{
     margin-top: auto;
-    text-align: center;
+    text-align: right;
   }
 
 .meet-team-title-container {
@@ -231,4 +236,12 @@ article#article {
 }
 .meet-team-container {
   margin-bottom: 50px;
+}
+
+.footer-copyright {
+  @extend .contact-icons-container
+}
+
+.meet-team-container__second {
+  margin-top: 35px;
 }
