--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,10 +483,15 @@ article#article.show .info .date-author {
   overflow: hidden !important;
 }
 
+.hero-banner {
+  margin: 0 !important;
+}
+
 .hero-banner__img {
   object-fit: cover;
-  width: 100vw;
+  width: 100%;
   height: 50vh;
+  margin: 0 !important;
 }
 
 .portrait__img {
@@ -497,16 +502,16 @@ article#article.show .info .date-author {
 
 .portrait {
   display: block;
-  text-align: center;
+  text-align: right;
 }
 
 .contact-title-container {
   margin: 60px 0;
 }
 
-.contact-icons-container {
+.contact-icons-container, .footer-copyright {
   margin-top: auto;
-  text-align: center;
+  text-align: right;
 }
 
 .meet-team-title-container {
@@ -515,6 +520,10 @@ article#article.show .info .date-author {
 
 .meet-team-container {
   margin-bottom: 50px;
+}
+
+.meet-team-container__second {
+  margin-top: 35px;
 }
 
 /*Articles SASS file*/
@@ -573,7 +582,7 @@ body {
   overflow: hidden;
   background: none !important;
   height: 287px;
-  width: 1181px;
+  width: 100%;
   display: block;
   text-align: center;
 }
@@ -584,6 +593,14 @@ body {
 
 .page-content {
   margin: 0 10%;
+}
+
+body {
+  padding: 0;
+}
+
+footer {
+  margin-top: 40px;
 }
 
 /*# sourceMappingURL=style.css.map */
