--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -3,7 +3,7 @@ Name: Google News SASS
 Version: 1.0
 */
 
-@import "colors.scss"; /*Colors SASS file*/ 
+@import "colors.scss"; /*Colors SASS file*/
 @import "mixin.scss"; /*Mixin SASS file*/
 @import "fonts.scss"; /*Fonts SASS file*/
 @import "header.scss"; /*Header SASS file*/
@@ -89,4 +89,5 @@ body {
 
 footer {
 	margin-top: 40px;
+  padding-bottom: 35px;
 }
