added padding navbar

--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -4,6 +4,7 @@
   margin: -2% -1% 0 -1%;
   width: 102%;
   height: 100px;
+  padding-top: 20px;
   overflow: hidden;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
   background: white;
